@@ -4,11 +4,13 @@
 
 <p align="center">
     <a href="https://powernukkitx.org">
-      <img src="https://docs.powernukkitx.org/img/PNX_LOGO_sm.png" width=20%>
+      <img src="https://avatars.githubusercontent.com/u/99014792" width=20%>
     </a>
     <p align="center">
         <strong>
-            A Minecraft Bedrock Edition Server Software, open source and written in java
+            Open-source, feature-rich Minecraft: Bedrock Edition server written in Java. 
+            <br>
+            Not affiliated with Mojang AB.
         </strong>
     </p>
 </p>
@@ -27,8 +29,8 @@
    <a href="https://discord.com/invite/XXus4FB6qf">
       <img alt="Discord" src="https://img.shields.io/discord/944227466912870410?label=discord&color=7289DA&logo=discord" />
    </a>
-   <a href="https://docs.powernukkitx.org" target="_blank">
-      <img alt="Documentation" src="https://img.shields.io/badge/documentation-yes-brightgreen.svg" />
+   <a href="https://powernukkitx.org" target="_blank">
+      <img alt="Website" src="https://img.shields.io/badge/documentation-yes-brightgreen.svg" />
    </a>
    <a href="https://codecov.io/github/PowerNukkitX/PowerNukkitX" > 
       <img alt="Codecov" src="https://codecov.io/github/PowerNukkitX/PowerNukkitX/graph/badge.svg?token=84HDP13KC3"/> 
@@ -38,61 +40,33 @@
    </a>
 </p>
 
-<p align="center">
-      <a href="README_FR.md">
-        <img src="https://raw.githubusercontent.com/PowerNukkitX/PowerNukkitX/master/.github/img/lang/fr.svg">
-      </a>
-      <a href="README_RU.md">
-         <img src="https://raw.githubusercontent.com/PowerNukkitX/PowerNukkitX/master/.github/img/lang/ru.svg">
-      </a>
-    <a href="README_TR.md">
-        <img src="https://raw.githubusercontent.com/PowerNukkitX/PowerNukkitX/master/.github/img/lang/tr.svg">
-    </a>
-</p>
-
 <br>
 
 **Feature-rich, highly customizable third-party server software for Minecraft: Bedrock Edition.**
 - 🪄 **Custom Item, Block and Entity support**
 - 🤖 **Vanilla-like Mob AI**
-- 🪴 **Terra Generator**
+- 🪴 **Vanilla-like world generation**
 - ✏️ **Full Vanilla Command Support**
 - 🗃️ **Full Item, Block and Container Support**
 - 🗿 **More features to discover...**
 
-## Install
-
-1. Make sure you have `JDK21` installed, if not [download from here](https://www.graalvm.org/downloads)
-2. Download the [`powernukkitx.jar`](https://github.com/PowerNukkitX/PowerNukkitX/releases/download/snapshot/powernukkitx.jar)
-3. Get your start script [here](https://github.com/PowerNukkitX/scripts/tree/master)
-
-## Usage
-
-Starting PowerNukkitX
-```sh
-java -jar --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED .\powernukkitx.jar
-```
-If you use a newer java version (greater than 21) you have to use one of the [startup scripts.](https://github.com/PowerNukkitX/scripts/tree/master)
+## Getting Started
+To get started, check out our [guide](https://powernukkitx.org/docs/) for guides and tutorials.
 
 ## Community & Support
-Join our [Discord](https://discord.gg/apwd7uauZg) server to chat with other users and developers.
-
-
+Join our [Discord](https://discord.gg/apwd7uauZg) server to chat with other users, developers and server owners.
 
 ## 🤝 Contributing to PowerNukkitX
-
 Contributions, issues and feature requests are welcome!<br />Feel free to
-check [issues page](https://github.com/PowerNukkitX/PowerNukkitX/issues). You can also take a look at
+check [issues page](https://github.com/PowerNukkitX/PowerNukkitX/issues). Also take a look at
 the [contributing guide](.github/CONTRIBUTING.md).
+
+## 📝 License Information
+This project is licensed under LGPL-3.0. Please see the [LICENSE](/LICENSE) file for details.
+
+## Give a ⭐️ if this project helped you!
+[![Stargazers over time](https://starchart.cc/PowerNukkitX/PowerNukkitX.svg?variant=adaptive)]()
 
 <a href="https://github.com/PowerNukkitX/PowerNukkitX/graphs/contributors">
   <img src="https://contrib.rocks/image?repo=PowerNukkitX/PowerNukkitX" />
 </a>
-
-## Give a ⭐️ if this project helped you!
-
-[![Stargazers over time](https://starchart.cc/PowerNukkitX/PowerNukkitX.svg?variant=adaptive)]()
-
-## 📝 License Information
-
-This project is licensed under LGPL-3.0. Please see the [LICENSE](/LICENSE) file for details.
